# dev-samples

./: README.md  developer-guide.md
dp-go-swift/core/: go.mod  go.sum  main.go
dp-go-swift/core/database/: mongodb.go
dp-go-swift/core/handlers/: city.go  listing.go
dp-go-swift/core/models/: city.go  listing.go
dp-go-swift/core/repositories/: listing.go  listingRepo.go
dp-go-swift/swift/swift/: ContentView.swift  swiftApp.swift
dp-go-swift/swift/swift.xcodeproj/: project.pbxproj
dp-go-swift/swift/swiftTests/: swiftTests.swift
dp-go-swift/swift/swiftUITests/: swiftUITests.swift  swiftUITestsLaunchTests.swift
dp-go-swift/sync/: .gitignore  index.js  package-lock.json  package.json
propto/: .env-example  README.md  docker-compose.yml
propto/backend/: .gitignore  Cargo.toml  Dockerfile
propto/backend/src/: db.rs  main.rs  property.rs
propto/propto_flutter/: Dockerfile  README.md  nginx.conf  pubspec.yaml
propto/propto_flutter/android/: gradle.properties
propto/propto_flutter/lib/: main.dart
propto/propto_flutter/linux/: CMakeLists.txt  my_application.cc
propto/propto_flutter/web/: index.html  (+1 more)
propto/synchronizer/: Dockerfile  package-lock.json  package.json  synchronizer-periodic.js  synchronizer.js
samplekit-laravel/: .env.example  README.md  app.yaml.local  composer.json  docker-compose.yml.template
samplekit-laravel/config/: app.php  database.php  services.php
samplekit-laravel/routes/: web.php
samplekit-laravel/scripts/: build-image.sh
samplekit-laravel/synchronizer/: package-lock.json  package.json  synchronizer.js
(+45 files in other folders)
