[package]
name = "propto-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.7"
actix-rt = "2.10"
futures = "0.3"
serde_json = "1.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
mongodb = { version = "2.3.0", features = ["tokio-runtime"] }